--- a/web/.env
+++ b/web/.env
@@ -3,6 +3,9 @@
 REACT_APP_SOLANA_RPC_TARGET=http://127.0.0.1:8899
 GENERATE_SOURCEMAP=false
 
+REACT_APP_PROGRAM_KEY=67714KFVqCYNTu7NUCjtMuid55dKutnXmjXpeqJEwmpu
+REACT_APP_GAME_KEY=6p9Qz2EwB7aPdWa5pcCosdHy6hxQtY2KRTYcS2MqbRAf
+REACT_APP_MINT_KEY=5NzMi8nySGm3S8KnKugvFkiP6P6nHAs1CcfsUCEsU369
 
 
 # PROD
