--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
         "@metaplex-foundation/amman": "^0.12.0",
         "@metaplex-foundation/js": "^0.13.3",
         "@project-serum/anchor": "^0.26.0",
+        "@solana/spl-token": "^0.3.8",
         "@solana/wallet-adapter-base": "^0.9.22",
         "@solana/wallet-adapter-react": "^0.15.33",
         "@solana/wallet-adapter-react-ui": "^0.9.32",
