--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
         "react-toastify": "^9.1.3",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
+        "react-icons": "^4.10.1",
         "tailwindcss": "^3.3.3",
         "url": "^0.11.0",
         "web-vitals": "^2.1.4",
