--- a/web/package.json
+++ b/web/package.json
@@ -46,12 +46,13 @@
         "postcss": "^8.4.27",
         "react": "^18.2.0",
         "react-app-rewired": "^2.2.1",
+        "react-confetti": "^6.1.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.10.1",
         "react-scripts": "5.0.1",
         "react-toastify": "^9.1.3",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
-        "react-icons": "^4.10.1",
         "tailwindcss": "^3.3.3",
         "url": "^0.11.0",
         "web-vitals": "^2.1.4",
