--- a/web/.env
+++ b/web/.env
@@ -1,6 +1,6 @@
-# REACT_APP_SOLANA_RPC_TARGET=https://quiet-muddy-log.solana-mainnet.quiknode.pro/4fffdad3de6974646ada97e9a6941f6aa3c5fd8e/
+REACT_APP_SOLANA_RPC_TARGET=https://quiet-muddy-log.solana-mainnet.quiknode.pro/4fffdad3de6974646ada97e9a6941f6aa3c5fd8e/
 # REACT_APP_SOLANA_RPC_TARGET=https://api.devnet.solana.com
-REACT_APP_SOLANA_RPC_TARGET=http://127.0.0.1:8899
+# REACT_APP_SOLANA_RPC_TARGET=http://127.0.0.1:8899
 GENERATE_SOURCEMAP=false
 
 REACT_APP_PROGRAM_KEY=67714KFVqCYNTu7NUCjtMuid55dKutnXmjXpeqJEwmpu
