--- a/token/package.json
+++ b/token/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "0.28.0",
     "@metaplex-foundation/js": "^0.19.4",
     "@metaplex-foundation/mpl-token-metadata": "^2.12.0",
     "@solana/spl-token": "^0.2.0",
