--- a/web/.env
+++ b/web/.env
@@ -9,8 +9,8 @@ REACT_APP_MINT_KEY=5q41Qpy4HtEtUfWBHBxmVEjg3DCdJ8wgdoLkNmEGm1vY
 
 
 # PROD
-# PUBLIC_URL=https://shdw-drive.genesysgo.net/7JoAUtG9qbTfohBXKzwybeTvfDU1RgJQXmg6uPg7S451/
+PUBLIC_URL=https://shdw-drive.genesysgo.net/5WRCJEgy7c1Wy3ewWdfJcAePMCaUq4asyuP8sRgTQZYq
 
 # TEST
-PUBLIC_URL=http://127.0.0.1:8080
+# PUBLIC_URL=http://127.0.0.1:8080
 # "homepage": "https://shdw-drive.genesysgo.net/7JoAUtG9qbTfohBXKzwybeTvfDU1RgJQXmg6uPg7S451",
