--- a/web/package.json
+++ b/web/package.json
@@ -51,10 +51,12 @@
         "react-icons": "^4.10.1",
         "react-scripts": "5.0.1",
         "react-toastify": "^9.1.3",
+        "react-tooltip": "^5.19.0",
         "stream-browserify": "^3.0.0",
         "stream-http": "^3.2.0",
         "tailwindcss": "^3.3.3",
         "url": "^0.11.0",
+        "use-sound": "^4.0.1",
         "web-vitals": "^2.1.4",
         "zustand": "^4.3.9"
     },
